# dongchon-ml

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
backend/: .env.example  dongchon.db  requirements.txt  run_server.bat
backend/app/: config.py  database.py  main.py
backend/app/api/: batches.py  insight.py  measurements.py  ml.py  tanks.py
backend/app/ml/: models.py  trainer.py
backend/app/ml/saved_models/v1/: label_encoders.pkl  metrics.json  optimizer_duration.pkl  optimizer_salinity.pkl  quality_classifier.pkl  salinity_model.joblib  scalers.pkl  time_predictor.pkl
backend/app/ml/saved_models/v2/: final_salinity_predictor.pkl  metadata.json  optimizer_duration.pkl  optimizer_salinity.pkl  quality_classifier.pkl  (+2 more)
backend/app/models/: models.py
backend/app/schemas/: ml_schemas.py  schemas.py
backend/database/: kimchi_factory.db
backend/scripts/: batches_summary_realistic.csv  dummy_data_2024.json  generate_dummy_data.py  generate_realistic_data.py  insert_dummy_data.sql  live_simulator.py  measurements_realistic.csv  realistic_data_2024_2025.json  seed_history.py
backend/sql/: 001_init_schema.sql
docs/: FUNCTION_SPEC.md  MANIFEST.md  SCREEN_DESIGN.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ChatPanel.tsx  ChatSidebar.tsx  InsightPanel.tsx  Layout.tsx  TankCard.tsx  TankDetailModal.tsx
src/pages/: Dashboard.tsx  History.tsx  Optimize.tsx  Settings.tsx
src/services/: api.ts
src/stores/: useStore.ts
src/types/: index.ts
(+8 files in other folders)
